[package]
name = "rsa"
version = "0.10.0-rc.8"
authors = ["RustCrypto Developers", "dignifiedquire <dignifiedquire@gmail.com>"]
edition = "2021"
description = "Pure Rust RSA implementation"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rsa"
repository = "https://github.com/RustCrypto/RSA"
keywords = ["rsa", "encryption", "security", "crypto"]
categories = ["cryptography"]
readme = "README.md"
rust-version = "1.85"

[dependencies]
const-oid = { version = "0.10", default-features = false }
crypto-bigint = { version = "0.7.0-rc.6", default-features = false, features = ["zeroize", "alloc"] }
crypto-primes = { version = "0.7.0-pre.2", default-features = false }
digest = { version = "0.11.0-rc.1", default-features = false, features = ["alloc", "oid"] }
rand_core = { version = "0.9", default-features = false }
signature = { version = "3.0.0-rc.4", default-features = false, features = ["alloc", "digest", "rand_core"] }
subtle = { version = "2.6.1", default-features = false }
zeroize = { version = "1.5", features = ["alloc"] }

# optional dependencies
pkcs1 = { version = "0.8.0-rc.3", optional = true, default-features = false, features = ["alloc", "pem"] }
pkcs8 = { version = "0.11.0-rc.6", optional = true, default-features = false, features = ["alloc", "pem"] }
serdect = { version = "0.3.0", optional = true }
sha1 = { version = "0.11.0-rc.2", optional = true, default-features = false, features = ["oid"] }
spki = { version = "0.8.0-rc.4", optional = true, default-features = false, features = ["alloc"] }
sha2 = { version = "0.11.0-rc.2", optional = true, default-features = false, features = ["oid"] }
serde = { version = "1.0.184", optional = true, default-features = false, features = ["derive"] }

[dev-dependencies]
base64ct = { version = "1", features = ["alloc"] }
hex-literal = "1"
proptest = "1"
serde_test = "1.0.89"
rand_xorshift = "0.4"
rand_chacha = "0.9"
rand = "0.9"
rand_core = { version = "0.9.1", default-features = false }
sha1 = { version = "0.11.0-rc.2", default-features = false, features = ["oid"] }
sha2 = { version = "0.11.0-rc.2", default-features = false, features = ["oid"] }
sha3 = { version = "0.11.0-rc.2", default-features = false, features = ["oid"] }
hex = { version = "0.4.3", features = ["serde"] }
serde_json = "1.0.138"
serde = { version = "1.0.184", features = ["derive"] }

[[bench]]
name = "key"

[features]
default = ["std", "encoding"]
encoding = ["dep:pkcs1", "dep:pkcs8", "dep:spki"]
hazmat = []
os_rng = ["rand_core/os_rng", "crypto-bigint/rand_core"]
serde = ["encoding", "dep:serde", "dep:serdect", "crypto-bigint/serde"]
pkcs5 = ["pkcs8/encryption"]
std = ["pkcs1?/std", "pkcs8?/std", "rand_core/std", "crypto-bigint/rand"]

[package.metadata.docs.rs]
features = ["std", "serde", "hazmat", "sha2"]
rustdoc-args = ["--cfg", "docsrs"]

[profile.dev]
opt-level = 2

[profile.bench]
debug = true
